Implement POST /apps request
